fixed footer and extra space on right

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
 body {
     background-color: #ffffff;
     font-family: 'Adobe Garamond Pro', 'Helvetica', 'Arial', sans-serif;
+    overflow-x: hidden; 
 }
 
 /* apply styles to <header> */
@@ -110,8 +111,25 @@ p {
     display: flex;
 }
 
+.contact-info {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.contact-info > * {
+    flex: 1;
+    margin: 15px;
+}
+
 .contact-form {
-    font-size: 24px;
+    height: 400px;
+    font-size: 20px;
+}
+
+.contact-info address {
+    font-size: 20px;
+    font-style: normal;
 }
 
 .contact-form input, .contact-form textarea {
@@ -120,7 +138,7 @@ p {
     padding: 5px 10px;
     font-size: 16px;
     color: black;
-    width: 40%;
+    width: 100%;
     margin-bottom: 10px;
     margin-top: 5px;
     border-radius: 10px;
@@ -132,19 +150,19 @@ p {
 }
 
 .contact-form button {
-    width: 40%;
+    width: 100%;
     border: none;
-    background: #0066cc;
-    color: black;
+    background: #000000;
+    color: #ffffff;
     text-align: center;
     padding: 10px 0;
-    font-size: 16px;
+    font-size: 20px;
     border-radius: 10px;
 }
 
 .contact-form button:hover {
     color: #ffffff;
-    background: #000a14;
+    background: #0066cc;
 }
 
 
@@ -152,15 +170,15 @@ p {
 footer {
     background: #000000;
     width: 100%;
-    padding: 35px 35px;
+    padding: 40px 35px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    margin-top: 50px;
+    margin-top: 130px;
 }
 
 footer h4 {
-    color: #eeeeee;
+    color: #ffffff;
     font-size: 20px;
     margin: 0;
 }
